# DevMaster

Dev_Master/code-sentinel/: README.md  __init__.py  cli.py  core.py
Dev_Master/code-sentinel/examples/: vulnerable_app_backup.py
Dev_Master/code-sentinel/fixers/: auto_fixer.py
Dev_Master/code-sentinel/patterns/: security_patterns.py
Dev_Master/deploy-shield/deploy_shield/fixers/: env_fixer.py
Dev_Master/deploy-shield/deploy_shield/validators/: ssl_validator.py
Dev_Master/devmaster/: README.md  generate_license.py  licenses_pro_1.txt  pyproject.toml
Dev_Master/devmaster/devmaster/: __init__.py  __main__.py  cli.py  coach.py  learner.py  license.py  nervous_system.py
Dev_Master/devmaster/devmaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
